--- a/public/index.html
+++ b/public/index.html
@@ -1,49 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-			integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
-			crossorigin="anonymous"
-		/>
-		<link rel="stylesheet" href="css/style.css" />
-		<title>Bhetghat App</title>
-	</head>
-	<body>
-		<div class="join-container">
-			<header class="join-header">
-				<h1><i class="fas fa-smile"></i> Bhetghat</h1>
-			</header>
-			<main class="join-main">
-				<form action="chat.html">
-					<div class="form-control">
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+		integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
+	<link rel="stylesheet" href="css/style.css" />
+	<title>Bhetghat App</title>
+</head>
+
+<body>
+	<div class="join-container">
+		<header class="join-header">
+			<h1><i class="fas fa-smile"></i> Bhetghat</h1>
+		</header>
+		<main class="join-main">
+			<form action="chat.html">
+				<div class="form-control">
+					<div class="label">
 						<label for="username">Username</label>
-						<input
-							type="text"
-							name="username"
-							id="username"
-							placeholder="Enter username..."
-							required
-						/>
+						<div class="help">!</div>
 					</div>
-					<div class="form-control">
-						<label for="room">Room</label>
-						<select name="room" id="room">
-							<option value="JavaScript">JavaScript</option>
-							<option value="Python">Python</option>
-							<option value="PHP">PHP</option>
-							<option value="C#">C#</option>
-							<option value="Ruby">Ruby</option>
-							<option value="Java">Java</option>
-						</select>
+					<input type="text" name="username" id="username" placeholder="Enter username..." required />
+					<div class="anonymous">
+						<input type="checkbox"> Chat as anonymous
 					</div>
-					<button type="submit" class="btn">Join Chat</button>
-				</form>
-			</main>
-		</div>
-	</body>
+				</div>
+				<div class="form-control">
+					<div class="label">
+						<label for="username">Gender</label>
+						<div class="help">!</div>
+					</div>
+					<select name="gender" id="gender" required>
+						<option value="">Select Gender</option>
+						<option value="F">Female</option>
+						<option value="M">Male</option>
+						<option value="O">Other</option>
+						<option value="N">Don't want to tell</option>
+					</select>
+				</div>
+				<div class="form-control">
+					<div class="label">
+						<label for="gender">Age Group </label>
+						<div class="help">!</div>
+					</div>
+					<select name="gender" id="gender" required>
+						<option value="">Select Age Group</option>
+						<option value="F">Below 20 Year</option>
+						<option value="M">20 - 30 Year</option>
+						<option value="O">30 - 40 Year</option>
+						<option value="N">Above 40 Year</option>
+					</select>
+				</div>
+				<div class="form-control">
+					<div class="label">
+						<label for="gender">Select Group </label>
+						<div class="help">!</div>
+					</div>
+					<div class="groups">
+						<div class="group">
+							<div class="icon age_group"></div>
+							<input id="age_group" type="radio" class="checkbox-icon" name="room" value="Age Group" onclick="changeBackground(event);">
+							<label for="age_group">By Age Group </label>
+						</div>
+						<div class="group">
+							<div class="icon location_group"></div>
+							<input id="location_group" type="radio" class="checkbox-icon" name="room" value="Location" onclick="changeBackground(event);">
+							<label for="location_group">By Location Group </label>
+						</div>
+						<div class="group">
+							<div class="icon gender_group"></div>
+							<input id="gender_group" type="radio" class="checkbox-icon" name="room" value="Gender" onclick="changeBackground(event);">
+							<label for="gender_group">By Gender Group </label>
+						</div>
+					</div>
+				</div>
+				<button type="submit" class="btn">Join Chat</button>
+			</form>
+
+		</main>
+	</div>
+	<script>
+		function changeBackground(e) {
+			const icons = ['gender_group', 'location_group', 'age_group'];
+			const id = e.target.id;
+			icons.forEach(icon =>{
+				document.querySelectorAll(`.${icon}`)[0].style.backgroundColor = icon === id ? '#5cb85c' : '#eee';
+			})
+		}
+	</script>
+</body>
+
 </html>
